Add Bearer token to swagger
